--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,10 @@
   		<artifactId>poi-ooxml</artifactId>
   		<version>3.17</version>
   	</dependency>
+  	<dependency>
+  		<groupId>log4j</groupId>
+  		<artifactId>log4j</artifactId>
+  		<version>1.2.17</version>
+  	</dependency>
   </dependencies>
 </project>
